forgotten backend code

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 spring.data.mongodb.uri=mongodb+srv://admin:umut@cluster0.76fci.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=Cluster0
+server.servlet.session.cookie.http-only=false 
+server.session.cookie.secure=false
+server.servlet.session.cookie.secure=false
 # App Properties
 demo.app.jwtCookieName= demo
 demo.app.jwtSecret= demoSecretKey
 demo.app.jwtExpirationMs= 86400000
+demo.app.jwtRefreshExpirationMs= 86400000
+
 
